1-17-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/audiofilemodule.c
	  src/audioread.c
	  src/audioread.h
	  src/pyvorbiscodec.c
	  src/pyvorbiscodec.h
	  src/pyvorbisfile.c
	  src/pyvorbisfile.h
	  src/pyvorbisinfo.c
	  src/pyvorbisinfo.h
	  src/vorbismodule.c
	  src/vorbismodule.h
	  src/wavread.c
	  src/wavread.h: Removed

	* config_unix.py : Added
	  setup.py : Take advantage of config_unix.py and only build ogg module

	* include/pyogg.h: Added 
	
	* src/_oggmodule.c (init_ogg): Changed to use new pyogg.h
	
11-29-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* test/ogg123.py: Added support for linuxaudiodev. Factored parts
	of Player class into a superclass and made separate AOPlayer and
	LADPlayer subclasses.

	* test/short.py: added
	
11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/_oggmodule.c (init_ogg): Stuff PyOgg_Error into a
	Py_CObject.
	* src/vorbismodule.c (initvorbis): Get PyOgg_Error back out to
	inherit from.
	* test/ogg123.py: Change to use new module arrangement.

11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: Changed leftover MySQLdb reference.
	Went back to having a separate _oggmodule and vorismodule.

	* oggmodule.[ch]: Moved to _oggmodule.[ch]

	* general.[ch]: Created to house any functions needed by more than
	one module. Currentnly houses arg_to_64.

	* src/pyvorbisinfo.c: Changed reference to mappingmethod struct in
	initializer to a pointer. Removed unused variables (mostly casts of *self)
	(py_comment_subscript): Added unicode support
	(py_comment_assign): Added unicode support
	(get_caps_key): Changed to (make_caps_key). Now takes size argument.
	(py_comment_as_dict): Fixed case of NULL vendor variable.
	
11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/vorbis*.[ch]: Moved to src/pyvorbis*.[ch]

	
11-28-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/vorbiscodec.[ch]:
	* src/vorbisfile.[ch]:
	* src/vorbisinfo.[ch]: