@@ -2,4 +2,5 @@ include ChangeLog README COPYING AUTHORS NEWS setup.py config_unix.py prebuild.s
 recursive-include src/ *.c *.h *.py
 recursive-include test/ *.py 
 recursive-include include/ *.h
-recursive-include debian
+recursive-include debian/ *
+prune debian/CVS
