@@ -9,6 +9,7 @@ typedef struct {
   ogg_sync_state os;
 } py_ogg_sync_state;
 
+#define PY_OGG_SYNC_STATE(x) (&(((py_ogg_sync_state *) (x))->os))
 
 extern PyTypeObject py_ogg_sync_state_type;
 
